[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/font_resources/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/stages/sf_stage_selector.tres" type="SpriteFrames" id=2]
[ext_resource path="res://sprites/stages/grohmann_stage_icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/stages/kern_stage_icon.png" type="Texture" id=4]
[ext_resource path="res://sprites/stages/cc_stage_icon.png" type="Texture" id=5]
[ext_resource path="res://sprites/stages/field_stage_icon.png" type="Texture" id=6]
[ext_resource path="res://sprites/stages/auditorium_stage_icon.png" type="Texture" id=7]
[ext_resource path="res://scripts/stage_selection.gd" type="Script" id=8]
[ext_resource path="res://sprites/stages/kern_stage_background.png" type="Texture" id=9]
[ext_resource path="res://sprites/CharacterSelection/border.png" type="Texture" id=15]
[ext_resource path="res://sprites/CharacterSelection/banner.png" type="Texture" id=16]
[ext_resource path="res://sprites/CharacterSelection/banner_shimmer.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="StageSelection" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 9 )

[node name="Border" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( 640, 360 )
scale = Vector2( 0.99, 0.99 )
texture = ExtResource( 15 )

[node name="TitleText" type="Label" parent="."]
margin_left = 343.0
margin_top = -70.0
margin_right = 1121.0
margin_bottom = 297.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Choose a Stage"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageNameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 253.0
margin_top = -9.0
margin_right = 1031.0
margin_bottom = 358.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 2 )
text = "Kern Center"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrohmannIcon" type="Sprite" parent="."]
position = Vector2( 250, 360 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="KernIcon" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="FieldIcon" type="Sprite" parent="."]
position = Vector2( 1030, 360 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="AuditoriumIcon" type="Sprite" parent="."]
position = Vector2( 440, 560 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="CCIcon" type="Sprite" parent="."]
position = Vector2( 830, 560 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Selector" type="AnimatedSprite" parent="."]
position = Vector2( 640, 358 )
scale = Vector2( 0.2, 0.2 )
frames = ExtResource( 2 )
frame = 1
speed_scale = 1.5
playing = true

[node name="FightBanner" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1, 1e-05 )
texture = ExtResource( 16 )

[node name="Shimmer" type="Sprite" parent="FightBanner"]
position = Vector2( -800, -14 )
texture = ExtResource( 17 )

[node name="TransitionColor" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
